// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Itaú — caso-âncora real (Henrique Justo Mengue, simulador itau.xlsm) > snapshot completo do caso-âncora (referência para qualquer mudança futura de regra) 1`] = `
{
  "avisoRenda": false,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 2500618,
  "parcelas": 396,
  "primeiraParcela": 14430.80726357538,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.13,
  "taxaMensal": 0.010236844358176,
  "tipoAmortizacao": "SAC",
  "totalJuros": 2142758.3465757756,
  "totalPago": 3465859.759677799,
  "totalSeguros": 268601.41310202325,
  "ultimaParcela": 2690.138263575003,
  "valorFinanciado": 1054500,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > LTV acima do limite (inelegível) 1`] = `
{
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": false,
  "maxFinanciavel30": 0,
  "motivoInelegivel": "Financiamento (R$ 450.000) excede 80% do imóvel",
  "parcelas": 420,
  "primeiraParcela": 0,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0,
  "tipoAmortizacao": "SAC",
  "totalJuros": 0,
  "totalPago": 450000,
  "totalSeguros": 0,
  "ultimaParcela": 0,
  "valorFinanciado": 450000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > LTV no limite de 80% 1`] = `
{
  "avisoRenda": true,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 371630,
  "parcelas": 420,
  "primeiraParcela": 4971.401514964152,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "SAC",
  "totalJuros": 792629.448423768,
  "totalPago": 1242411.4542685305,
  "totalSeguros": 49782.00584476248,
  "ultimaParcela": 961.3463346728347,
  "valorFinanciado": 400000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > PRICE, aquisição residencial padrão 1`] = `
{
  "avisoRenda": false,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 371630,
  "parcelas": 420,
  "primeiraParcela": 3589.2344658072843,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "PRICE",
  "totalJuros": 1061386.6756390512,
  "totalPago": 1489548.5640032832,
  "totalSeguros": 78161.8883642318,
  "ultimaParcela": 3360.4444658072844,
  "valorFinanciado": 350000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > SAC, aquisição residencial padrão 1`] = `
{
  "avisoRenda": false,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 371630,
  "parcelas": 420,
  "primeiraParcela": 4356.901325593633,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "SAC",
  "totalJuros": 693550.7673707972,
  "totalPago": 1088564.2724849642,
  "totalSeguros": 45013.505114167,
  "ultimaParcela": 841.1780428387228,
  "valorFinanciado": 350000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > com ITBI incorporado (5% padrão) 1`] = `
{
  "avisoRenda": true,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 371630,
  "parcelas": 420,
  "primeiraParcela": 4664.151420278892,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "SAC",
  "totalJuros": 743090.1078972749,
  "totalPago": 1165487.863376739,
  "totalSeguros": 47397.755479464045,
  "ultimaParcela": 901.2621887557617,
  "valorFinanciado": 375000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > com ITBI incorporado (percentual customizado) 1`] = `
{
  "avisoRenda": true,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 371630,
  "parcelas": 420,
  "primeiraParcela": 4541.251382404788,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "SAC",
  "totalJuros": 723274.3716866743,
  "totalPago": 1134718.4270200182,
  "totalSeguros": 46444.05533334404,
  "ultimaParcela": 877.2285303889114,
  "valorFinanciado": 365000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > com dataContratacao explícita (idade calculada na data do contrato, não hoje) 1`] = `
{
  "avisoRenda": false,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 371630,
  "parcelas": 420,
  "primeiraParcela": 4301.3213255936325,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "SAC",
  "totalJuros": 693550.7673707972,
  "totalPago": 1083434.7897992975,
  "totalSeguros": 39884.02242850023,
  "ultimaParcela": 841.1780428387228,
  "valorFinanciado": 350000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > com override de dfiRate 1`] = `
{
  "avisoRenda": false,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 371630,
  "parcelas": 420,
  "primeiraParcela": 4356.901325593633,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "SAC",
  "totalJuros": 693550.7673707972,
  "totalPago": 1088564.2724849642,
  "totalSeguros": 45013.505114167,
  "ultimaParcela": 841.1780428387228,
  "valorFinanciado": 350000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > com override de mipRate (deve usar taxa flat, ignorando a tabela período+idade) 1`] = `
{
  "avisoRenda": false,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 363317,
  "parcelas": 420,
  "primeiraParcela": 4356.901325593633,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "SAC",
  "totalJuros": 693550.7673707972,
  "totalPago": 1088564.2724849642,
  "totalSeguros": 45013.505114167,
  "ultimaParcela": 841.1780428387228,
  "valorFinanciado": 350000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > com overrides do banco de dados (taxa, LTV, prazo customizados) 1`] = `
{
  "avisoRenda": false,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 368696,
  "parcelas": 360,
  "primeiraParcela": 4390.376175138622,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.115,
  "taxaMensal": 0.009112468436904,
  "tipoAmortizacao": "SAC",
  "totalJuros": 575680.1935014046,
  "totalPago": 958047.5756295987,
  "totalSeguros": 32367.382128194076,
  "ultimaParcela": 981.0815665358645,
  "valorFinanciado": 350000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > com valorAvaliacao diferente de valorImovel (DFI incide sobre avaliação, não sobre o imóvel) 1`] = `
{
  "avisoRenda": false,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 371630,
  "parcelas": 420,
  "primeiraParcela": 4367.981325593633,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "SAC",
  "totalJuros": 693550.7673707972,
  "totalPago": 1090891.0724849643,
  "totalSeguros": 47340.30511416696,
  "ultimaParcela": 841.1780428387228,
  "valorFinanciado": 350000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > correntista (taxa igual à base no Itaú — sem diferenciação hoje) 1`] = `
{
  "avisoRenda": false,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 371630,
  "parcelas": 420,
  "primeiraParcela": 4356.901325593633,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "SAC",
  "totalJuros": 693550.7673707972,
  "totalPago": 1088564.2724849642,
  "totalSeguros": 45013.505114167,
  "ultimaParcela": 841.1780428387228,
  "valorFinanciado": 350000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > idade 44 anos — fronteira entre valores "estimados" (até 43) e "exatos" (44+) na tabela atual 1`] = `
{
  "avisoRenda": false,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 366447,
  "parcelas": 420,
  "primeiraParcela": 4451.541325593634,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "SAC",
  "totalJuros": 693550.7673707972,
  "totalPago": 1144574.116177798,
  "totalSeguros": 101023.34880700082,
  "ultimaParcela": 841.1780428387228,
  "valorFinanciado": 350000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > idade jovem (25 anos) — tabela MIP_P1 faixa baixa 1`] = `
{
  "avisoRenda": false,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 374120,
  "parcelas": 420,
  "primeiraParcela": 4255.681325593633,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "SAC",
  "totalJuros": 693550.7673707972,
  "totalPago": 1065483.871248964,
  "totalSeguros": 21933.103878166778,
  "ultimaParcela": 841.1780428387228,
  "valorFinanciado": 350000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > idade no corte duro de 80 anos (inelegível) 1`] = `
{
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": false,
  "maxFinanciavel30": 0,
  "motivoInelegivel": "Idade máxima de 80 anos atingida",
  "parcelas": 12,
  "primeiraParcela": 0,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0,
  "tipoAmortizacao": "SAC",
  "totalJuros": 0,
  "totalPago": 350000,
  "totalSeguros": 0,
  "ultimaParcela": 0,
  "valorFinanciado": 350000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > idade próxima ao limite (78 anos — prazo reduzido pela regra idade+prazo) 1`] = `
{
  "avisoRenda": true,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 80206,
  "parcelas": 23,
  "primeiraParcela": 19280.857256608127,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "SAC",
  "totalJuros": 39537.33590712358,
  "totalPago": 394795.3013871236,
  "totalSeguros": 5257.965479999998,
  "ultimaParcela": 15360.64252140262,
  "valorFinanciado": 350000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > imóvel usado (Itaú não aplica penalidade de LTV — só a Caixa aplica) 1`] = `
{
  "avisoRenda": false,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 371630,
  "parcelas": 420,
  "primeiraParcela": 4356.901325593633,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "SAC",
  "totalJuros": 693550.7673707972,
  "totalPago": 1088564.2724849642,
  "totalSeguros": 45013.505114167,
  "ultimaParcela": 841.1780428387228,
  "valorFinanciado": 350000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > prazo longo (420 meses) cruzando a fronteira P1→P2 (mês 121, renovação decenal) 1`] = `
{
  "avisoRenda": true,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 366447,
  "parcelas": 420,
  "primeiraParcela": 5029.081514964152,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "SAC",
  "totalJuros": 792629.448423768,
  "totalPago": 1275071.7579479595,
  "totalSeguros": 82442.30952419146,
  "ultimaParcela": 961.3463346728347,
  "valorFinanciado": 400000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > renda baixa (aviso de comprometimento de renda) 1`] = `
{
  "avisoRenda": true,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 72119,
  "parcelas": 420,
  "primeiraParcela": 4356.901325593633,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "SAC",
  "totalJuros": 693550.7673707972,
  "totalPago": 1088564.2724849642,
  "totalSeguros": 45013.505114167,
  "ultimaParcela": 841.1780428387228,
  "valorFinanciado": 350000,
}
`;
